:art: :sparkles: 将繁殖仪式黑暗化的几率调整为5%，修复春与福文字错误，重做植物体系，增加杂交内容，支持自动化。

--- a/index.html
+++ b/index.html
@@ -1584,7 +1584,7 @@ function change(str){
 <code>数据包 cpp_plants</code>
 <h3>作物与杂交</h3>
 <p>
-新增20种作物，需种植在耕地上，成熟后使用右键收割，获得相应作物。当作物与相邻的作物可杂交时，有5%的几率会产生新品种的种子，其中小麦/甜菜根/马铃薯/胡萝卜在收割时决定，其它作物则在生长成熟时直接变异。</p>
+新增20种作物，需种植在耕地上，成熟后收割可获得相应作物。当作物与相邻的作物可杂交时，有5%的几率会产生新品种的种子，其中小麦/甜菜根/马铃薯/胡萝卜在收割时决定，其它作物则在生长成熟时直接变异。</p>
 
 <table><thead><tr><th>种子</th><th>杂交来源</th><th>作物</th></tr></thead><tbody>
 <tr><td><strong>彼岸花种子 (Lycoris Radiata Seeds)</strong></td><td>小麦种子+甜菜根种子</td><td>玫瑰红</td></tr>
@@ -2371,7 +2371,7 @@ function change(str){
 <p>当发射器发射的物品可以种植在前方位置时，会自动种植。</p>
 <table><thead><tr><th>方块</th><th>作物</th></tr></thead><tbody>
 <tr><td>泥土等</td><td>树苗、魔法树苗</td></tr>
-<tr><td>耕地</td><td>小麦种子、甜菜种子、南瓜种子、西瓜种子、胡萝卜、马铃薯、魔法作物种子</td></tr>
+<tr><td>耕地</td><td>小麦种子、甜菜种子、南瓜种子、西瓜种子、胡萝卜、马铃薯、各种作物种子</td></tr>
 <tr><td>灵魂沙</td><td>地狱疣</td></tr>
 <tr><td>末地石</td><td>紫颂花</td></tr>
 <tr><td>菌丝</td><td>蘑菇</td></tr>
