--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ function change(str){
 <h4 id="develop">技术性提醒</h4>
 <p>该版本分为19个数据包模块，玩家如需要移除部分功能可将其对应的数据包删除或禁用即可。不过，模块之间有依赖关系，请根据内容保留必要的模块。</p>
 <p>本模组命名空间和记分板、标签、组名称前缀为cpp，为便于他人整合使用，烦请避开此前缀。此外，材质已占用胡萝卜钓竿0-17和木剑0-22耐久值区段。</p>
-<p>模组大部分文字支持中英双语。如有任何意见建议，欢迎<a href="http://www.mcbbs.net/thread-696861-1-1.html">在论坛回复</a>、<a href="https://github.com/ruhuasiyu/craftingpp/issues/new">发起issue</a>或<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>。</p>
+<p>模组大部分文字支持中英双语。如有任何意见建议，欢迎<a href="http://www.mcbbs.net/thread-696861-1-1.html">在论坛回复</a>、<a href="https://github.com/ruhuasiyu/craftingpp/issues/new">发起issue</a>、<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>或<a href="https://jq.qq.com/?_wv=1027&k=5aDxnaY">加入qq群(142340634)</a>。</p>
 
 <h4 id="declaration">声明</h4>
 <p>转载本文需遵守<strong><a href="https://creativecommons.org/licenses/by-nc-nd/2.5/cn/">CC BY-NC-ND 2.5 CN 许可协议</a></strong>——列出作者(<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">ruhuasiyu@mcbbs</a>)、来源、原始下载链接以及相同的许可协议。</p>
