--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@ function change(str){
 
 <h4 id="develop">技术性提醒</h4>
 <p>该版本分为19个数据包模块，玩家如需要移除部分功能可将其对应的数据包删除或禁用即可。不过，模块之间有依赖关系，请根据内容保留必要的模块。</p>
-<p>本模组命名空间和记分板、标签、组名称前缀为cpp，为便于他人整合使用，烦请避开此前缀。此外，材质已占用胡萝卜钓竿0-17和木剑0-22耐久值区段。</p>
-<p>模组大部分文字支持中英双语。如有任何意见建议，欢迎<a href="http://www.mcbbs.net/thread-696861-1-1.html">在论坛回复</a>、<a href="https://github.com/ruhuasiyu/craftingpp/issues/new">发起issue</a>、<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>或<a href="https://jq.qq.com/?_wv=1027&k=5aDxnaY">加入qq群(142340634)</a>。</p>
+<p>本模组命名空间和记分板、标签、组名称前缀为cpp，为便于他人整合使用，烦请避开此前缀。</p>
+<p>模组大部分文字支持中英双语。如有任何意见建议，欢迎<a href="http://www.mcbbs.net/thread-696861-1-1.html">在论坛回复</a>、<a href="https://github.com/ruhuasiyu/craftingpp/issues/new">发起issue</a>、<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>或<a href="https://jq.qq.com/?_wv=1027&k=5aDxnaY">加入意见反馈QQ群(142340634)</a>。</p>
 
 <h4 id="declaration">声明</h4>
 <p>转载本文需遵守<strong><a href="https://creativecommons.org/licenses/by-nc-nd/2.5/cn/">CC BY-NC-ND 2.5 CN 许可协议</a></strong>——列出作者(<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">ruhuasiyu@mcbbs</a>)、来源、原始下载链接以及相同的许可协议。</p>
@@ -1584,7 +1584,7 @@ function change(str){
 <code>数据包 cpp_plants</code>
 <h3>作物与杂交</h3>
 <p>
-新增20种作物，需种植在耕地上，成熟后收割可获得相应作物。当作物与相邻的作物可杂交时，有5%的几率会产生新品种的种子，其中小麦/甜菜根/马铃薯/胡萝卜在收割时决定，其它作物则在生长成熟时直接变异。</p>
+新增20种作物，需种植在耕地上，成熟后收割可获得相应作物。作物不受时运影响，且不可用骨粉催熟。当作物与相邻的作物可杂交时，有5%的几率会产生新品种的种子，其中小麦/甜菜根/马铃薯/胡萝卜在收割时决定，其它作物则在生长成熟时直接变异。</p>
 
 <table><thead><tr><th>种子</th><th>杂交来源</th><th>作物</th></tr></thead><tbody>
 <tr><td><strong>彼岸花种子 (Lycoris Radiata Seeds)</strong></td><td>小麦种子+甜菜根种子</td><td>玫瑰红</td></tr>
@@ -1662,7 +1662,7 @@ function change(str){
 </span></span></span></td></tr>
 
 </tbody></table>
-<p>羊毛树的树叶为不同的羊毛搭配树叶而成，水果树的树叶破坏后会掉落水果树树苗或水果<!--，水果可用于制作果汁-->，矿石树会掉落矿石。二者均可用骨粉催熟。</p>
+<p>新增三种树。羊毛树的树叶为不同的羊毛搭配树叶而成，水果树的树叶破坏后会掉落水果树树苗或水果<!--，水果可用于制作果汁-->，矿石树会掉落矿石。均可用骨粉催熟。</p>
 
 </article>
 
@@ -3400,8 +3400,8 @@ function change(str){
 <tr class="v1-8"><td>新增鲁莽药水、忍者药水的酿造。</td></tr>
 <tr class="v1-8"><td>新增附魔金苹果和拔丝苹果的熬制。</td></tr>
 
-<tr class="v1-8"><td>新增魔法种子和材料种子，可种植。</td></tr>
-<tr class="v1-8"><td>新增羊毛树和水果树。</td></tr>
+<tr class="v1-8"><td>新增20种材料种子，可种植和杂交。</td></tr>
+<tr class="v1-8"><td>新增羊毛树、水果树、矿石树。</td></tr>
 
 <tr class="v1-8"><td>新增魔杖、星之魔杖、节制器、黑暗权杖。</td></tr>
 <tr class="v1-8"><td>将特定方块摆放成八边形作为仪式基座，手持魔杖右击发射器，然后等待发射器上符文粒子消失即可执行仪式。</td></tr>
