:art: 画作和春联均改用模型而非地图，现在合成树必须用相应树苗，移除地图文件

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 }
 span.colorful_items{
 	background-image: url(items/colorful_items.png);
-	background-size: 288px 416px;
+	background-size: 288px 480px;
 }
 span.magma_block{
 	background-image: url(items/magma_block.gif);
@@ -1617,12 +1617,12 @@ function change(str){
 <h3>树</h3>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>	
 <tr><th id="fruit_sapling"><strong>水果树树苗 (Fruit Sapling)</strong></th>
-<td>任意树苗+8 苹果</td>
+<td>橡树树苗+8 苹果</td>
 <td><span class="mcui"><span><span class="mcui-row"><span class="apple" title="苹果">
 </span><span class="apple" title="苹果">
 </span><span class="apple" title="苹果">
 </span></span><span class="mcui-row"><span class="apple" title="苹果">
-</span><span class="oak_sapling" title="任意树苗">
+</span><span class="oak_sapling" title="橡树树苗">
 </span><span class="apple" title="苹果">
 </span></span><span class="mcui-row"><span class="apple" title="苹果">
 </span><span class="apple" title="苹果">
@@ -1632,12 +1632,12 @@ function change(str){
 </span></span></span></td></tr>
 
 <tr><th id="wool_sapling"><strong>矿石树树苗 (Ore Sapling)</strong></th>
-<td>煤炭+钻石+红石+铁锭+任意树苗<br />+金锭+青金石+绿宝石+石英</td>
+<td>煤炭+钻石+红石+铁锭+云杉树苗<br />+金锭+青金石+绿宝石+石英</td>
 <td><span class="mcui"><span><span class="mcui-row"><span class="coal" title="煤炭">
 </span><span class="diamond" title="钻石">
 </span><span class="redstone" title="红石">
 </span></span><span class="mcui-row"><span class="iron_ingot" title="铁锭">
-</span><span class="oak_sapling" title="任意树苗">
+</span><span class="spruce_sapling" title="云杉树苗">
 </span><span class="gold_ingot" title="金锭">
 </span></span><span class="mcui-row"><span class="lapis_lazuli" title="青金石">
 </span><span class="emerald" title="绿宝石">
@@ -1647,12 +1647,12 @@ function change(str){
 </span></span></span></td></tr>
 
 <tr><th id="wool_sapling"><strong>羊毛树树苗 (Wool Sapling)</strong></th>
-<td>任意树苗+8 白色羊毛</td>
+<td>白桦树苗+8 白色羊毛</td>
 <td><span class="mcui"><span><span class="mcui-row"><span class="white_wool" title="白色羊毛">
 </span><span class="white_wool" title="白色羊毛">
 </span><span class="white_wool" title="白色羊毛">
 </span></span><span class="mcui-row"><span class="white_wool" title="白色羊毛">
-</span><span class="oak_sapling" title="任意树苗">
+</span><span class="birch_sapling" title="白桦树苗">
 </span><span class="white_wool" title="白色羊毛">
 </span></span><span class="mcui-row"><span class="white_wool" title="白色羊毛">
 </span><span class="white_wool" title="白色羊毛">
@@ -2116,7 +2116,7 @@ function change(str){
 <!--画作-->
 <code>数据包 cpp_paintings</code>
 <h3>画作</h3>
-<p>新增了16种画的合成。根据画的尺寸，将画放置在物品展示框上以拼成完整的画。</p>
+<p>新增了16种画的合成，将画放置在物品展示框上即可。</p>
 
 <table><thead><tr><th>名称</th><th>材料</th><th>合成配方</th><!--<th>原画</th>--></tr></thead>
 <tbody>
@@ -2131,7 +2131,7 @@ function change(str){
 </span><span class="blue_wool" title="蓝色羊毛">
 </span><span class="blue_wool" title="蓝色羊毛">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
-<span class="filled_map" title="呐喊"><span class="stacksize">12</span></span></span></span></td><!--
+<span class="colorful_items skrik" title="呐喊"></span></span></span></td><!--
 <td class="original_paintings"><img src="items/paintings/10000-10011.jpg" /></td>-->
 </tr>
 
@@ -2146,7 +2146,7 @@ function change(str){
 </span><span class="black_wool" title="黑色羊毛">
 </span><span class="black_wool" title="黑色羊毛">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
-<span class="filled_map" title="蒙娜丽莎"><span class="stacksize">6</span></span></span></span></td><!--
+<span class="colorful_items mona_lisa" title="蒙娜丽莎"></span></span></span></td><!--
 <td class="original_paintings"><img src="items/paintings/10012-10017.jpg" /></td>-->
 </tr>
 
@@ -2161,7 +2161,7 @@ function change(str){
 </span><span class="white_wool" title="白色羊毛">
 </span><span class="white_wool" title="白色羊毛">
 </span></span></span><span class="mcui-arrow"></span><span class="mcui-output">
-<span class="filled_map" title="最后的晚餐"><span class="stacksize">2</span></span></span></span></td><!--
+<span class="colorful_items the_last_supper" title="最后的晚餐"></span></span></span></td><!--
 <td class="original_paintings"><img src="items/paintings/10018-10019.jpg" /></td>-->
 </tr>
 
@@ -2177,7 +2177,7 @@ function change(str){
 </span><span class="white_wool" title="白色羊毛">
 </span><span class="black_wool" title="黑色羊毛">
 </span></span></span><span class="mcui-arrow"></span>
-<span class="mcui-output"><span class="filled_map" title="落霞孤鹜图"><span class="stacksize">2</span></span></span></span></td><!--
+<span class="mcui-output"><span class="colorful_items luoxia_guwu" title="落霞孤鹜图"></span></span></span></td><!--
 <td class="original_paintings"><img src="items/paintings/10020-10021.jpg" /></td>-->
 </tr>
 
@@ -2192,7 +2192,7 @@ function change(str){
 </span><span class="black_wool" title="黑色羊毛">
 </span><span class="white_wool" title="白色羊毛">
 </span></span></span><span class="mcui-arrow"></span>
-<span class="mcui-output"><span class="filled_map" title="竹石图"><span class="stacksize">2</span></span></span></span></td><!--
+<span class="mcui-output"><span class="colorful_items bamboo_and_stone" title="竹石图"></span></span></span></td><!--
 <td class="original_paintings"><img src="items/paintings/10022-10023.jpg" /></td>-->
 </tr>
 
@@ -2207,7 +2207,7 @@ function change(str){
 </span><span class="yellow_wool" title="黄色羊毛">
 </span><span class="yellow_wool" title="黄色羊毛">
 </span></span></span><span class="mcui-arrow"></span>
-<span class="mcui-output"><span class="filled_map" title="向日葵"><span class="stacksize">12</span></span></span></span></td><!--
+<span class="mcui-output"><span class="colorful_items sunflower" title="向日葵"></span></span></span></td><!--
 <td class="original_paintings"><img src="items/paintings/10024-10035.jpg" /></td>-->
 </tr>
 
@@ -2222,7 +2222,7 @@ function change(str){
 </span><span class="brown_wool" title="棕色羊毛">
 </span><span class="brown_wool" title="棕色羊毛">
 </span></span></span><span class="mcui-arrow"></span>
-<span class="mcui-output"><span class="filled_map" title="日出·印象"><span class="stacksize">12</span></span></span></span></td><!--
+<span class="mcui-output"><span class="colorful_items impression_soleil_levant" title="日出·印象"></span></span></span></td><!--
 <td class="original_paintings"><img src="items/paintings/10036-10047.jpg" /></td>-->
 </tr>
 
@@ -2237,7 +2237,7 @@ function change(str){
 </span><span class="cyan_wool" title="青色羊毛">
 </span><span class="yellow_wool" title="黄色羊毛">
 </span></span></span><span class="mcui-arrow"></span>
-<span class="mcui-output"><span class="filled_map" title="莫奈花园"><span class="stacksize">12</span></span></span></span></td><!--
+<span class="mcui-output"><span class="colorful_items monet_in_garden" title="莫奈花园"></span></span></span></td><!--
 <td class="original_paintings"><img src="items/paintings/10048-10059.jpg" /></td>-->
 </tr>
 
@@ -2252,7 +2252,7 @@ function change(str){
 </span><span class="brown_wool" title="棕色羊毛">
 </span><span class="red_wool" title="红色羊毛">
 </span></span></span><span class="mcui-arrow"></span>
-<span class="mcui-output"><span class="filled_map" title="岩间圣母"><span class="stacksize">6</span></span></span></span></td><!--
+<span class="mcui-output"><span class="colorful_items virgin_of_the_rocks" title="岩间圣母"></span></span></span></td><!--
 <td class="original_paintings"><img src="items/paintings/10060-10065.jpg" /></td>-->
 </tr>
 
@@ -2267,7 +2267,7 @@ function change(str){
 </span><span class="yellow_wool" title="黄色羊毛">
 </span><span class="white_wool" title="白色羊毛">
 </span></span></span><span class="mcui-arrow"></span>
-<span class="mcui-output"><span class="filled_map" title="创造亚当"><span class="stacksize">2</span></span></span></span></td><!--
+<span class="mcui-output"><span class="colorful_items the_creation_of_adam" title="创造亚当"></span></span></span></td><!--
 <td class="original_paintings"><img src="items/paintings/10066-10067.jpg" /></td>-->
 </tr>
 
@@ -2282,7 +2282,7 @@ function change(str){
 </span><span class="black_wool" title="黑色羊毛">
 </span><span class="yellow_wool" title="黄色羊毛">
 </span></span></span><span class="mcui-arrow"></span>
-<span class="mcui-output"><span class="filled_map" title="伏尔加河上的纤夫"><span class="stacksize">2</span></span></span></span></td><!--
+<span class="mcui-output"><span class="colorful_items barge_haulers_on_the_volga" title="伏尔加河上的纤夫"></span></span></span></td><!--
 <td class="original_paintings"><img src="items/paintings/10068-10069.jpg" /></td>-->
 </tr>
 
@@ -2297,7 +2297,7 @@ function change(str){
 </span><span class="yellow_wool" title="黄色羊毛">
 </span><span class="yellow_wool" title="黄色羊毛">
 </span></span></span><span class="mcui-arrow"></span>
-<span class="mcui-output"><span class="filled_map" title="开国大典"><span class="stacksize">2</span></span></span></span></td><!--
+<span class="mcui-output"><span class="colorful_items the_founding_ceremony_of_the_nation" title="开国大典"></span></span></span></td><!--
 <td class="original_paintings"><img src="items/paintings/10070-10071.jpg" /></td>-->
 </tr>
 
@@ -2312,7 +2312,7 @@ function change(str){
 </span><span class="black_wool" title="黑色羊毛">
 </span><span class="yellow_wool" title="黄色羊毛">
 </span></span></span><span class="mcui-arrow"></span>
-<span class="mcui-output"><span class="filled_map" title="无名女郎"><span class="stacksize">12</span></span></span></span></td><!--
+<span class="mcui-output"><span class="colorful_items the_unknown_girl" title="无名女郎"></span></span></span></td><!--
 <td class="original_paintings"><img src="items/paintings/10072-10083.jpg" /></td>-->
 </tr>
 
@@ -2327,7 +2327,7 @@ function change(str){
 </span><span class="blue_wool" title="蓝色羊毛">
 </span><span class="blue_wool" title="蓝色羊毛">
 </span></span></span><span class="mcui-arrow"></span>
-<span class="mcui-output"><span class="filled_map" title="星夜"><span class="stacksize">12</span></span></span></span></td><!--
+<span class="mcui-output"><span class="colorful_items the_starry_night" title="星夜"></span></span></span></td><!--
 <td class="original_paintings"><img src="items/paintings/10084-10095.jpg" /></td>-->
 </tr>
 
@@ -2342,7 +2342,7 @@ function change(str){
 </span><span class="orange_wool" title="橙色羊毛">
 </span><span class="orange_wool" title="橙色羊毛">
 </span></span></span><span class="mcui-arrow"></span>
-<span class="mcui-output"><span class="filled_map" title="自由引导人民"><span class="stacksize">6</span></span></span></span></td><!--
+<span class="mcui-output"><span class="colorful_items liberty_leading_the_people" title="自由引导人民"></span></span></span></td><!--
 <td class="original_paintings"><img src="items/paintings/10096-10101.jpg" /></td>-->
 </tr>
 
@@ -2357,7 +2357,7 @@ function change(str){
 </span><span class="orange_wool" title="橙色羊毛">
 </span><span class="orange_wool" title="橙色羊毛">
 </span></span></span><span class="mcui-arrow"></span>
-<span class="mcui-output"><span class="filled_map" title="拾穗者"><span class="stacksize">6</span></span></span></span></td>
+<span class="mcui-output"><span class="colorful_items the_gleaners" title="拾穗者"></span></span></span></td>
 <!--<td class="original_paintings"><img src="items/paintings/10102-10107.jpg" /></td>-->
 </tr>
 </tbody></table>
@@ -2956,12 +2956,38 @@ function change(str){
 <tr><td style="text-align:center">2-4 绿宝石</td><td style="text-align:center">金合欢树苗</td></tr>
 <tr><td style="text-align:center">2-4 绿宝石</td><td style="text-align:center">深色橡木树苗</td></tr>
 
-<tr><th rowspan="6"><img src="items/villager/painter.png" style="height:100px;"/></th><th rowspan="6">书画师</th><th rowspan="3">1</th><td style="text-align:center">24-36 纸</td><td style="text-align:center">绿宝石</td></tr>
+<tr><th rowspan="32"><img src="items/villager/painter.png" style="height:100px;"/></th><th rowspan="32">书画师</th><th rowspan="3">1</th><td style="text-align:center">24-36 纸</td><td style="text-align:center">绿宝石</td></tr>
 <tr><td style="text-align:center">36-40 玫瑰红</td><td style="text-align:center">绿宝石</td></tr>
 <tr><td style="text-align:center">36-40 墨囊</td><td style="text-align:center">绿宝石</td></tr>
-<tr><th rowspan="3">2</th><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">福字或春字</td></tr>
-<tr><td style="text-align:center">28-44 绿宝石</td><td style="text-align:center">对联<sup>[1]</sup></td></tr>
-<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">TCP logo</td></tr>
+<tr><th rowspan="29">2</th><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">TCP 图标</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">日出江花红胜火<sup>[1]</sup></td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">春来江水绿如蓝</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">爆竹声声辞旧岁</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">春联户户迎新春</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">一年四季行好运</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">八方财宝进家门</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">迎新春平安如意</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">贺佳节富贵平安</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">旧岁又添几个喜</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">新年更上一层楼</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">绿竹别其三分景</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">红梅正报万家春</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">天增岁月人增寿</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">春满乾坤福满楼</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">喜居宝地千年旺</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">福照家门万事兴</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">鸟语花香</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">万象更新</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">四季平安</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">国泰民安</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">辞旧迎新</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">春回大地</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">四季长安</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">喜迎新春</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">春</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">福</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">五谷丰登</td></tr>
+<tr><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">六畜兴旺</td></tr>
 
 <tr><th style="width:50px;"><img src="items/villager/santa_claus.png" style="height:100px;"/></th><th style="width:70px;">圣诞老人</th><th>-</th><td style="text-align:center">皮革靴子+1-64 绿宝石</td><td style="text-align:center">圣诞礼物<sup>[2]</sup></td></tr>
 
@@ -3011,14 +3037,28 @@ function change(str){
 <tr><td style="text-align:center">河鲀+12-20 绿宝石</td><td style="text-align:center">河鲀桶</td></tr>
 
 <tr><td colspan="5">
-[1] 对联分为四个部分出售，共四种样式。<br />
-<img src="items/image/20101.png" style="width:80px;" />
-<img src="items/image/20102.png" style="width:80px;" />
-<img src="items/image/20099.png" style="width:80px;" /><br />
-<img src="items/image/20028-20031.png" style="width:80px;" /><img src="items/image/20024-20027.png" style="width:80px;" />
-<img src="items/image/20020-20023.png" style="width:80px;" /><img src="items/image/20016-20019.png" style="width:80px;" />
-<img src="items/image/20012-20015.png" style="width:80px;" /><img src="items/image/20008-20011.png" style="width:80px;" />
-<img src="items/image/20004-20007.png" style="width:80px;" /><img src="items/image/20000-20003.png" style="width:80px;" /><br />
+[1] 对联和横批共8种样式：<br />
+<img src="items/image/scroll8.png" style="height:28px;" />
+<img src="items/image/scroll7.png" style="height:28px;" />
+<img src="items/image/scroll6.png" style="height:28px;" />
+<img src="items/image/scroll5.png" style="height:28px;" />
+<img src="items/image/scroll4.png" style="height:28px;" />
+<img src="items/image/scroll3.png" style="height:28px;" />
+<img src="items/image/scroll2.png" style="height:28px;" />
+<img src="items/image/scroll1.png" style="height:28px;" /><br />
+<img src="items/image/spring_couplets16.png" style="width:56px;" /><img src="items/image/spring_couplets15.png" style="width:56px;" />
+<img src="items/image/spring_couplets14.png" style="width:56px;" /><img src="items/image/spring_couplets13.png" style="width:56px;" />
+<img src="items/image/spring_couplets12.png" style="width:56px;" /><img src="items/image/spring_couplets11.png" style="width:56px;" />
+<img src="items/image/spring_couplets10.png" style="width:56px;" /><img src="items/image/spring_couplets9.png" style="width:56px;" />
+<img src="items/image/spring_couplets8.png" style="width:56px;" /><img src="items/image/spring_couplets7.png" style="width:56px;" />
+<img src="items/image/spring_couplets6.png" style="width:56px;" /><img src="items/image/spring_couplets5.png" style="width:56px;" />
+<img src="items/image/spring_couplets4.png" style="width:56px;" /><img src="items/image/spring_couplets3.png" style="width:56px;" />
+<img src="items/image/spring_couplets2.png" style="width:56px;" /><img src="items/image/spring_couplets1.png" style="width:56px;" /><br />
+<img src="items/image/spring.png" style="height:60px;" />
+<img src="items/image/happiness.png" style="height:60px;" />
+<img src="items/image/harvest.png" style="height:60px;" />
+<img src="items/image/prosperous.png" style="height:60px;" />
+<img src="items/image/tcp_logo.png" style="height:60px;" /><br />
 [2] 打开后可随机获得鞘翅、附魔钻石盔甲/工具/剑、铁盔甲/工具/剑、矿物、食物、鞍、马铠、种子。<br />
 [3] 为双层球状，颜色随机。<br />
 </td></tr>
